# ogre-jrpg

./: README.md
appdirectory/: .gitignore  .ycm_extra_conf.py  AnimationCallback.h  AnimationController.cpp  AnimationController.h  AnimationSpec.h  BaseGame.cpp  BaseGame.h  Character.cpp  Character.h  DamageAlertSystem.cpp  DamageAlertSystem.h  DamageIndicatorController.cpp  DamageIndicatorController.h  GUISystem.cpp  GUISystem.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  HUD.cpp  HUD.h  HUDListener.h  HUDTargetable.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Main.cpp  Makefile.am  MeshSpec.h  MeshSpecBank.cpp  MeshSpecBank.h  MovableText.cpp  MovableText.h  MovableTextOverlay.cpp  MovableTextOverlay.h  Ninja.cpp  Ninja.h  OgreScreenRecorder.cpp  (+24 more)
appdirectory/assets/audio/: AudioSources.xml
appdirectory/assets/characters/: characters.xml
appdirectory/assets/fonts/: proper-definitions.fontdef
appdirectory/assets/gui/: menus.project
appdirectory/assets/gui/imagesets/: CharacterProfiles.imageset  ProfilePicturesPlaceholder.xcf
appdirectory/assets/gui/layouts/: character_select.layout  end_state.layout  hud.layout  item_info.layout  menu.layout  scaling_menu.layout
appdirectory/assets/item/: inventory.xml
appdirectory/assets/materials/: damage-indicators.material  healthbar.material  ninjaskins.material  ravena.material  redtransparent.material  target.material
appdirectory/assets/meshes/: MeshSpecs.xml
appdirectory/assets/particles/: particles.particle
appdirectory/material/: Example.material
appdirectory/particle/: Example.material  Example.particle
winbuild/: ogre-jrpg.sln  ogre-jrpg.vcxproj  ogre-jrpg.vcxproj.filters
